# miscellaneous

./: .bashrc  .clang-format  .clangd  .gdbinit  .gitconfig  .screenrc  .tmux.conf  .vimrc  bookmarks.html  lexer.l  plop.cpp
codingChallenges/lispInterpreter/: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  ast.cpp  ast.h  lexer.l  main.c  main.cpp  parser.y  sayhello.cpp  test1.lsp  test1.lsp.expected  test2.lsp  test3.lsp.expected  test4.lsp.expected  test5.lsp.expected  test7.lsp  testNestedEmptyExpression.lsp  y.tab.h
codingChallenges/lispInterpreter/tests/: CMakeLists.txt  test1.lsp.expected  test2.lsp.expected  test3.lsp  test3.lsp.expected  test4.lsp.expected  test5.lsp  test7.lsp.expected  test8.lsp  test9.lsp  testDriver.sh  testEmptyExpression.lsp.expected
codingChallenges/lispInterpreter/tests/expected/: test1.lsp.expected  test2.lsp.expected  test4.lsp.expected  test5.lsp.expected  test7.lsp.expected  test8.lsp.expected  test9.lsp.expected  testNestedEmptyExpression.lsp.expected
discmark/log/: Makefile  logsink.cpp  logsink.h  logsource.cpp  logsource.h
discmark/log/CVS/: Entries  Repository  Root
discmark/tl/: Makefile  mutex.cpp  mutex.h  mutexlock.cpp  mutexlock.h  thread.cpp  thread.h  threadtest.cpp
discmark/tl/CVS/: Entries  Repository
discmark/website/: Makefile  bespoke_development.xml  contactus.xml  discmark.xsl  discmark.xsl~  how.xml  index.xml  it_infrastructure.xml  privacy.xml  security.xml  technotes.xml  web_design.xml  who.xml  why.xml
discmark/website/CVS/: Entries  Repository
